# chronicle-rs

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  MODULE_BOUNDARIES.md  NOTES.md  README.md  REFACTORING_SUMMARY.md  REFACTOR_SUMMARY.md  STREAM_MODULE_ANALYSIS.md
.devcontainer/: devcontainer.json
.gemini/commands/: blueprint.toml
benches/: baseline_uds.rs  dir_contention.rs  fanin.rs  ipc.rs  read.rs  roll_latency.rs  seek.rs  warm_start.rs
crates/2-infra/chronicle-bus/: Cargo.toml
crates/2-infra/chronicle-bus/examples/: feed.rs  router.rs  strategy.rs
crates/2-infra/chronicle-bus/src/: layout.rs  lib.rs
crates/2-infra/chronicle-bus/src/discovery/: router.rs
crates/2-infra/chronicle-storage/: Cargo.toml
crates/2-infra/chronicle-storage/src/: lib.rs  main.rs  tier.rs  zstd.rs
crates/2-infra/chronicle-storage/src/access/: reader.rs  resolver.rs
crates/2-infra/chronicle-storage/tests/: zstd_seek.rs
crates/3-engine/chronicle-replay/: Cargo.toml
crates/3-engine/chronicle-replay/benches/: warm_start.rs
crates/3-engine/chronicle-replay/src/: lib.rs  snapshot.rs
crates/3-engine/chronicle-replay/tests/: warm_start.rs
crates/4-app/chronicle-cli/: Cargo.toml
crates/4-app/chronicle-cli/src/: main.rs  monitor.rs
crates/4-app/chronicle-etl/: Cargo.toml
crates/4-app/chronicle-etl/src/: features.rs  lib.rs  triggers.rs
crates/4-app/chronicle-feed-binance/: Cargo.toml
crates/4-app/chronicle-feed-binance/examples/: read_feed.rs  reconstruct_book.rs
crates/4-app/chronicle-feed-binance/src/: binance.rs  main.rs  market.rs
crates/chronicle/: Cargo.toml
crates/chronicle-archive/: Cargo.toml
crates/chronicle-bus/: Cargo.toml
crates/chronicle-bus/examples/: feed.rs  passive_subscriber.rs  strategy.rs
crates/chronicle-bus/src/: discovery.rs  layout.rs  lib.rs  passive.rs  ready.rs
crates/chronicle-bus/src/discovery/: router.rs  subscriber.rs
crates/chronicle-cli/: Cargo.toml
crates/chronicle-cli/src/: main.rs  monitor.rs
crates/chronicle-core/: Cargo.toml
crates/chronicle-core/benches/: append.rs  dir_contention.rs  ipc.rs  roll_latency.rs  seek.rs
crates/chronicle-core/src/: control.rs  header.rs  lib.rs  merge.rs  mmap.rs  reader.rs  retention.rs  segment.rs  writer.rs  writer_lock.rs
crates/chronicle-core/tests/: append_single_writer.rs  index_flush.rs  merge_fanin.rs  notifier_wake.rs  reader_disconnect.rs  reader_recovery.rs  retention_cleanup.rs  retention_lag.rs  segment_rollover.rs  smoke.rs  soak_writer_reader.rs  stress_single_writer.rs
crates/chronicle-etl/: Cargo.toml
crates/chronicle-etl/src/: extractor.rs  feature.rs  lib.rs
crates/chronicle-feed-binance/: Cargo.toml
crates/chronicle-feed-binance/examples/: read_feed.rs  reconstruct_book.rs
crates/chronicle-feed-binance/src/: binance.rs  lib.rs  main.rs  market.rs
crates/chronicle-replay/: Cargo.toml
crates/chronicle-replay/benches/: warm_start.rs
crates/chronicle-replay/src/: lib.rs
crates/chronicle/benches/: append.rs  dir_contention.rs  ipc.rs  warm_start.rs
crates/chronicle/examples/: passive_subscriber.rs
crates/chronicle/src/: lib.rs
crates/chronicle/src/bus/: lease.rs  registration.rs
crates/chronicle/src/bus/discovery/: mod.rs  subscriber.rs
crates/chronicle/src/core/: clock.rs  merge.rs  reader.rs  retention.rs  segment.rs  writer.rs  writer_lock.rs
crates/chronicle/src/etl/: features.rs  refinery.rs
crates/chronicle/src/feed_binance/: binance.rs
crates/chronicle/src/storage/: tier.rs
crates/chronicle/tests/: catalog_delta.rs  index_flush.rs  notifier_wake.rs  reader_disconnect.rs  reader_resilience.rs  seek.rs  soak_writer_reader.rs
crates/chronicle/tests/data/dim_symbol/: part-00000-test.parquet
docs/: COMPRESSION_GUIDE.md  CORE_MODULE_ARCHITECTURE.md  DESIGN-etl.md  DESIGN-latency.md  DESIGN-patterns.md  DESIGN-research.md  DESIGN-storage.md  DESIGN-szse-l3-reconstructor.md  DESIGN-workspace.md  DESIGN.md  LLM_FRIENDLY_CODING_STANDARDS.md  PATH-CONTRACT.md  REPLAY_SYSTEM_DESIGN.md  ROADMAP.md  STORAGE_UNIFICATION_PLAN.md  TIMESERIES_TABLE_PLAN.md  code-review-ull.md
docs/prompts/: hft-arch-design.md
examples/: compression_policies.rs  feed.rs  reconstruct_book.rs  router.rs  strategy.rs  table_basic.rs  table_query.rs  table_rolling.rs  timeseries_demo.rs
execplans/: phase-0-core-bus-split.md  phase-1-core-storage.md  phase-10-cli-tooling.md  phase-10-control-v2-segment-size.md  phase-11-signal-suppression.md  phase-12-prealloc-hardening.md  phase-13-cli-monitor.md  phase-14-binance-feed.md  phase-15-binance-depth.md  phase-16-hot-archive-refactor.md  phase-17-etl-refinery.md  phase-18-tiered-storage-upgrade.md  phase-19-raw-archiver.md  phase-2-single-writer.md  phase-20-tardis-csv-import.md  phase-3-reader-path.md  phase-4-event-notification.md  phase-5-segment-rolling.md  phase-6-multi-queue-fanin.md  phase-7-queue-discovery.md  phase-8-hardening-benchmarks.md  phase-8-protocol-alignment.md  phase-9-docs-examples.md  stream-refactor.md
execplans/archived/: phase-8-protocol-alignment.md
scripts/: merge_szse_l3.py  merge_szse_l3_polars.py
src/: error.rs  header.rs  lib.rs  merge.rs  mmap.rs  notifier.rs  reader.rs  retention.rs  segment.rs  wait.rs  writer.rs
src/bus/: mod.rs  ready.rs
src/cli/: monitor.rs
src/core/: clock.rs  control.rs  error.rs  header.rs  log.rs  merge.rs  mmap.rs  mod.rs  notifier.rs  reader.rs  retention.rs  seek_index.rs  segment.rs  segment_cursor.rs  segment_store.rs  segment_writer.rs  timeseries.rs  wait.rs  writer.rs  writer_lock.rs  zstd_seek.rs
src/etl/: catalog.rs  extractor.rs  feature.rs  features.rs  mod.rs  refinery.rs  sink.rs  triggers.rs
src/feed_binance/: binance.rs
src/import/: mod.rs  szse_l3_csv.rs
src/ingest/: market.rs  mod.rs
src/ipc/: bidirectional.rs  mod.rs  (+3 more)
tests/: append_single_writer.rs  catalog_delta.rs  csv_import.rs  merge_fanin.rs  notifier_wake.rs  raw_archiver.rs  reader_recovery.rs  reader_resilience.rs  retention_cleanup.rs  retention_lag.rs  round_trip.rs  seek.rs  segment_rollover.rs  stress_single_writer.rs  warm_start.rs  zstd_seek.rs
(+104 files in other folders)
