[package]
name = "chronicle"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Chronicle-style low-latency persisted messaging queue"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
arrow = { version = "57.2.0", optional = true }
clap = { version = "4.5.54", features = ["derive"], optional = true }
core_affinity = { version = "0.8", optional = true }
crc32fast = "1"
crossterm = { version = "0.29.0", optional = true }
csv = { version = "1.3", optional = true }
env_logger = { version = "0.10", optional = true }
flate2 = { version = "1", optional = true }
futures-util = { version = "0.3", optional = true }
hdrhistogram = { version = "7.5.4", optional = true }
blake3 = { version = "1", optional = true }
libc = "0.2"
log = "0.4"
memmap2 = "0.9"
parquet = { version = "57.2.0", features = ["arrow"], optional = true }
quanta = "0.12.6"
ratatui = { version = "0.26.0", optional = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
simd-json = { version = "0.13", optional = true }
thiserror = "1"
tokio = { version = "1.28", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"], optional = true }
time = { version = "0.3", optional = true }
url = { version = "2.4", optional = true }
zstd = "0.13"

[features]
default = ["bus", "protocol", "stream", "cli"]
bus = []
protocol = []
stream = [
    "protocol",
    "dep:arrow",
    "dep:blake3",
    "dep:clap",
    "dep:csv",
    "dep:parquet",
    "dep:serde",
    "dep:serde_json",
]
cli = [
    "bus",
    "dep:clap",
    "dep:crossterm",
    "dep:hdrhistogram",
    "dep:ratatui",
]

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "append"
harness = false

[[bench]]
name = "read"
harness = false

[[bench]]
name = "dir_contention"
harness = false

[[bench]]
name = "ipc"
harness = false

[[bench]]
name = "roll_latency"
harness = false

[[bench]]
name = "fanin"
harness = false

[[bench]]
name = "baseline_uds"
harness = false

[[bench]]
name = "seek"
harness = false

[[bin]]
name = "chronicle-cli"
path = "src/bin/chronicle_cli.rs"
required-features = ["cli", "stream"]

[[bin]]
name = "chronicle-etl"
path = "src/bin/chronicle_etl.rs"
required-features = ["stream"]

[[bin]]
name = "snapshotter"
path = "src/bin/snapshotter.rs"
required-features = ["stream"]
