[package]
name = "chronicle-bus"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Chronicle control-plane helpers for queue discovery and readiness"

[dependencies]
chronicle-core = { path = "../chronicle-core" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
