[package]
name = "chronicle-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Chronicle-style low-latency persisted messaging queue"

[lib]
path = "src/lib.rs"

[dependencies]
crc32fast = "1"
libc = "0.2"
memmap2 = "0.9"
quanta = "0.12.6"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "append"
harness = false

[[bench]]
name = "read"
harness = false

[[bench]]
name = "dir_contention"
harness = false

[[bench]]
name = "ipc"
harness = false

[[bench]]
name = "roll_latency"
harness = false

[[bench]]
name = "fanin"
harness = false

[[bench]]
name = "baseline_uds"
harness = false
