[package]
name = "chronicle-feed-binance"
version = "0.1.0"
edition = "2021"
description = "Binance market data feed adapter for Chronicle"

[dependencies]
chronicle-core = { path = "../chronicle-core" }
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
clap = { version = "4.3", features = ["derive"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"