[package]
name = "chronicle-replay"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Replay engine and state reconstruction for chronicle-protocol"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chronicle-core = { path = "../chronicle-core" }
chronicle-protocol = { path = "../chronicle-protocol" }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "warm_start"
harness = false
