[package]
name = "chronicle-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
chronicle-core = { path = "../../1-primitives/chronicle-core" }
anyhow = "1"
zstd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.54", features = ["derive"] }

[dev-dependencies]
tempfile = "3"