[package]
name = "chronicle-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
chronicle-core = { path = "../../1-primitives/chronicle-core" }
chronicle-bus = { path = "../../2-infra/chronicle-bus" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hdrhistogram = "7.5.4"
ratatui = "0.26.0"
crossterm = "0.29.0"
