[package]
name = "chronicle-etl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arrow = "57.2.0"
parquet = { version = "57.2.0", features = ["arrow"] }
chronicle-core = { path = "../../1-primitives/chronicle-core" }
chronicle-protocol = { path = "../../1-primitives/chronicle-protocol" }
chronicle-replay = { path = "../../3-engine/chronicle-replay" }