[package]
name = "chronicle-feed-binance"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chronicle = { path = "../../chronicle" }
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"
core_affinity = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = "2.4"
clap = { version = "4.3", features = ["derive"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.10"
